<resources>
    <string name="app_name">RestHeridApp</string>
    <string name="mi_tfg">Mi TFG</string>
    <string name="paciente">Paciente</string>
    <string name="pacientes">Pacientes</string>
    <string name="proceso">Proceso</string>
    <string name="procesos">Procesos</string>
    <string name="addproceso">Nuevo Proceso</string>
    <string name="editproceso">Editar Proceso</string>
    <string name="anamnesis">Anamnesis</string>
    <string name="diagnostico">Diagnóstico</string>
    <string name="tipo">Tipo</string>
    <string name="observaciones">Observaciones</string>
    <string name="msg_proceso_guardado_ok">Proceso creado correctamente</string>
    <string name="cura">Cura</string>
    <string name="curas">Curas</string>
    <string name="guardar">Guardar</string>
    <string name="editar">EDITAR</string>
    <string name="evolucion">Evolución</string>
    <string name="tratamiento">Tratamiento</string>
    <string name="recomendaciones">Recomendaciones</string>
    <string name="addcura">Nueva Cura</string>
    <string name="editcura">Editar Cura</string>
    <string name="title_activity_login">Entrar</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Acceder</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_formato_email_invalido">Formato de email no válido</string>
    <string name="error_tam_email_invalido">El email debe contener entre 4 y 100 caracteres</string>
    <string name="error_tam_password_invalida">La contraseña debe contener entre 4 y 100 caracteres</string>
    <string name="entrando">Accediendo a la aplicación</string>
    <string name="recordar">Recordar email</string>
    <string name="error_tam_nombre_invalido">El nombre debe contener entre 3 y 50 caracteres</string>
    <string name="error_tam_apellidos_invalido">Los apellidos deben contener entre 3 y 100 caracteres</string>
    <string name="registrando">Registrando...</string>
    <string name="registro">Registro</string>
    <string name="errores">ERRORES</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="email">Email</string>
    <string name="administrador">Administrador</string>
    <string name="sanitario">Sanitario</string>
    <string name="registrar">Registrar</string>
    <string name="logotipo_de_la_aplicacion">Logotipo de la Aplicación</string>
    <string name="login">Login</string>
    <string name="panel_de_administracion">Panel de Administración</string>
    <string name="centros">Centros</string>
    <string name="salas">Salas</string>
    <string name="grupos_diagnosticos">Grupos Diagnósticos</string>
    <string name="diagnosticos">Diagnósticos</string>
    <string name="procedimientos">Procedimientos</string>
    <string name="administradores">Administradores</string>
    <string name="sanitarios">Sanitarios</string>
    <string name="valoraciones">Valoraciones</string>
    <string name="cargando">Cargando...</string>
    <string name="titulo">Título</string>
    <string name="subtitulo">Subtítulo</string>
    <string name="borrar">Borrar</string>
    <string name="quiere_borrar">¿Realmente quiere borrar este elemento?</string>
    <string name="seleccione_opcion">Seleccione una opción</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="centro">Centro</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="creando_nuevo_registro">Creando nuevo registro</string>
    <string name="error_tam_direccion_invalido">La dirección debe contener entre 10 y 200 caracteres</string>
    <string name="guardando">Guardando</string>
    <string name="creado_registro">Registro CREADO correctamente.</string>
    <string name="editado_registro">Registro EDITADO correctamente.</string>
    <string name="borrado_registro">Registro BORRADO correctamente.</string>
    <string name="quiere_salir">¿Quiere salir de la aplicación?</string>
    <string name="descripcion">Descripción</string>
    <string name="sala">Sala</string>
    <string name="seleccione_centro">Seleccione un Centro</string>
    <string name="debes_seleccionar_centro">Debes seleccionar un Centro.</string>
    <string name="seleccione_sala">Seleccione una Sala</string>
    <string name="debes_seleccionar_sala">Debes seleccionar una Sala.</string>
    <string name="buscar">Buscar</string>
    <string name="introduce_palabras_clave">Introduce palabras clave</string>
    <string name="grupo_diagnostico">Grupo Diagnóstico</string>
    <string name="codigo">Código</string>
    <string name="seleccione_grupo_diagnostico">Seleccione Grupo Diagnóstico</string>
    <string name="debes_seleccionar_grupo_diagnosticos">Debes seleccionar un Grupo Diagnóstico</string>
    <string name="campo_no_vacio">Este campo no puede estar vacío</string>
    <string name="error_conversion">Error de conversión. Contacte con su administrador.</string>
    <string name="error_conexion_red">Hay un problema con su conexión de red. Revíselo e inténtelo de nuevo.</string>
    <string name="error_acceso">Email o contraseña incorrectos</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="error_token_incorrecto">¡Token de acceso incorrecto!</string>
    <string name="procedimiento">Procedimiento</string>
    <string name="activo">Activo</string>
    <string name="dni">Dni</string>
    <string name="fnac">Fecha de nacimiento</string>
    <string name="fnac_formato">Fecha de nacimiento (dd/mm/yyyy)</string>
    <string name="error_tam_dni">El dni tiene que contener 9 dígitos</string>
    <string name="colegiado">Número de Colegiado</string>
    <string name="numero_historia">Número de Historia</string>
    <string name="ranking_valoraciones">Ranking Valoraciones</string>
    <string name="todas_valoraciones">Todas Valoraciones</string>
    <string name="total_valoraciones">Total Valoraciones</string>
    <string name="valoracion_media">Valoración Media</string>
    <string name="valoraciones_recientes">Valoraciones Recientes</string>
    <string name="portal_del_sanitario">Portal del Sanitario</string>
    <string name="portal_del_paciente">Portal del Paciente</string>
    <string name="nueva_asistencia">Nueva Asistencia</string>
    <string name="gestion_cuidados">Gestionar Cuidados</string>
    <string name="seleccione_Gdiagnostico">Seleccione un Grupo de Diagnósticos</string>
    <string name="seleccione_diagnostico">Seleccione Diagnóstico</string>
    <string name="debes_seleccionar_diagnostico">Debes seleccionar un Diagnóstico.</string>
    <string name="seleccione_procedimiento">Seleccione Procedimiento</string>
    <string name="debes_seleccionar_procedimiento">Debes seleccionar un Procedimiento.</string>
    <string name="edad">Edad</string>
    <string name="nhc">NHC</string>
    <string name="filtrando_diagnosticos">Filtrando diagnósticos</string>
    <string name="fotos">Fotos</string>
    <string name="imagen">Imagen</string>
    <string name="subiendo_imagen">Subiendo Imagen...</string>
    <string name="error">ERROR</string>
    <string name="ok_imagen">Imagen subida al servidor correctamente.</string>
    <string name="no_seleccion_imagen">No has seleccionado ninguna imagen</string>
    <string name="error_desconocido">Error desconocido</string>
    <string name="error_crear_directorio">Error al crear el directorio</string>
    <string name="ok_foto">Fotografía subida al servidor correctamente.</string>
    <string name="ok_foto_borrada_de_aqui">Fotografía subida al servidor correctamente.\nEliminada de este dispositivo.</string>
    <string name="foto_borrada"> Se ha eliminado de este dispositivo</string>
    <string name="preferencias">Preferencias</string>
    <string name="ip">IP del servidor</string>
    <string name="msg_save">Configuración guardada correctamente.</string>
    <string name="introduce_descripcion">Introduzca descripción...</string>
    <string name="configuracion">Configuración</string>
    <string name="hora_inicio">Hora de Inicio</string>
    <string name="horario_fin">Horario Fin</string>
    <string name="cupo_dia">Cupo/Día</string>
    <string name="minutos_paciente">Minutos/Paciente</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miércoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="lunes_">L</string>
    <string name="martes_">M</string>
    <string name="miercoles_">X</string>
    <string name="jueves_">J</string>
    <string name="viernes_">V</string>
    <string name="sabado_">S</string>
    <string name="domingo_">D</string>
    <string name="valor_0_23">Éste debe ser un valor entre 0 y 23</string>
    <string name="valor_0_59">Éste debe ser un valor entre 0 y 59</string>
    <string name="valor_1_60">Éste debe ser un valor entre 1 y 60</string>
    <string name="hora_fin_mayor_inicio">Hora fin debe ser posterior a la de inicio</string>
    <string name="valor_mayor_cero">Éste debe ser un valor mayor que cero.</string>
    <string name="horario">Horario</string>
    <string name="dias_disponibles">Días disponibles</string>
    <string name="no_definido">No definido.</string>
    <string name="agenda_citas">Agenda de Citas</string>
    <string name="orden">Orden</string>
    <string name="numero_orden">Número de orden</string>
    <string name="fecha_citas">Fecha de Citas</string>
    <string name="numero_citas">Número de Citas</string>
    <string name="hora">Hora</string>
    <string name="asistencias">Asistencias</string>
    <string name="mis_cuidados">Mis Cuidados</string>
    <string name="valorar_asistencias">Valorar Asistencias</string>
    <string name="mis_citas">Mis Citas</string>
    <string name="cita">Cita</string>
    <string name="fecha_hora">Fecha y hora</string>
    <string name="seleccione_fecha">Seleccione Fecha</string>
    <string name="ver_disponibilidad">Ver Disponibilidad</string>
    <string name="reservar_cita">Reservar Cita</string>
    <string name="cita_reservada">Cita Reservada Correctamente</string>
    <string name="buscar_disponibilidad">Buscar Disponibilidad</string>
    <string name="quiere_reservar_cita">¿Quiere reservar esta cita?</string>
    <string name="quiere_borrar_cita">¿Realmente quiere borrar esta cita?</string>
    <string name="configuracion_servidor">Configuración del Servidor</string>
    <string name="ip_url_servidor">IP o url del Servidor</string>
    <string name="puerto">Puerto</string>
    <string name="puerto_0_65535">Puerto (del 0 al 65535)</string>
    <string name="usar_https">Usar https</string>
    <string name="debes_escribir_ip_url">Debes escribir IP o URL válida</string>
    <string name="conf_servidor_guardada">Configuración guardada correctamente</string>
    <string name="editar_cita">Editar Cita</string>
    <string name="cita_editada">Cita editada correctamente</string>
    <string name="desde">Desde</string>
    <string name="hasta">Hasta</string>
    <string name="val_0">No me ha gustado nada</string>
    <string name="val_2_5">No me ha gustado</string>
    <string name="val_5">No está mal</string>
    <string name="val_7_5">Me ha gustado</string>
    <string name="val_10">Me ha encantado</string>
    <string name="password_olvidada_titulo">Contraseña olvidada</string>
    <string name="password_olvidada_explicacion">¿No recuerdas tu contraseña? ¡No te preocupes! Te enviaremos un mensaje de correo con instrucciones para restablecerla</string>
    <string name="prompt_email_pass_olvidada">Introduce tu correo electrónico</string>
    <string name="action_sign_in_restablecer">Restablecer contraseña</string>
</resources>