<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uca.ruiz.antonio.tfgapp.ui.activity.admin.ValoracionNewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ib_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/val_0"
            app:srcCompat="@drawable/ic_star" />

        <ImageButton
            android:id="@+id/ib_2_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/val_2_5"
            app:srcCompat="@drawable/ic_star" />

        <ImageButton
            android:id="@+id/ib_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/val_5"
            app:srcCompat="@drawable/ic_star" />

        <ImageButton
            android:id="@+id/ib_7_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/val_7_5"
            app:srcCompat="@drawable/ic_star" />

        <ImageButton
            android:id="@+id/ib_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/val_10"
            app:srcCompat="@drawable/ic_star" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/et_observaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/observaciones"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>
