<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uca.ruiz.antonio.tfgapp.ui.activity.admin.SalaConfigActivity">


    <LinearLayout
        android:id="@+id/ll_sala"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/border_azul"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/tv_sala_tit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/sala"
            android:textColor="@color/azul"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_sala"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/azul"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_centro_tit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/centro"
            android:textColor="@color/azul"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_centro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/azul"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/border_naranja"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/tv_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/configuracion"
            android:textAlignment="center"
            android:textColor="@color/naranja"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ini"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/hora_inicio"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_horaini"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:ems="2"
                android:hint="hh"
                android:inputType="numberSigned"
                android:maxEms="5"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:text=":"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/et_minini"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:ems="2"
                android:hint="mm"
                android:inputType="numberSigned"
                android:maxEms="2"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cupo"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/cupo_dia"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_cupo"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="55dp"
                android:ems="2"
                android:inputType="numberSigned"
                android:maxEms="5"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_minutos"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/minutos_paciente"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_minutos"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="55dp"
                android:ems="2"
                android:inputType="numberSigned"
                android:maxEms="5"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chk_lunes"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/lunes" />

            <CheckBox
                android:id="@+id/chk_martes"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/martes" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chk_miercoles"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/miercoles" />

            <CheckBox
                android:id="@+id/chk_jueves"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/jueves" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chk_viernes"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/viernes" />

            <CheckBox
                android:id="@+id/chk_sabado"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/sabado" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chk_domingo"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dp"
                android:text="@string/domingo" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="CheckBox"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

