<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uca.ruiz.antonio.tfgapp.ui.activity.OlvidoPasswordActivity">

    <TextView
        android:id="@+id/tv_tit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/password_olvidada_titulo"
        android:textAlignment="center"
        android:textColor="@color/naranja"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_explicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_naranja"
        android:padding="10dp"
        android:text="@string/password_olvidada_explicacion"
        android:textColor="@color/azul" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/user"
            android:drawableStart="@drawable/user"
            android:hint="@string/prompt_email_pass_olvidada"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_entrar"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button_naranja"
        android:text="@string/action_sign_in_restablecer"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" />

</LinearLayout>